added base homeroute. Added routes index routs to homepage. added auth func to auth.js did a view/login.handlebars

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -13,7 +13,7 @@
                 <input class="form-input" type="password" id="password-login" />
               </div>
                 <div class="form-group">
-                <button class="btn btn-primary" type="submit">login</button>
+                <button class="button" type="submit">login</button>
                 <h4>No account?  </h4>
                 <h4>Click here :<a href="/signup"> Signup</a> </h4>
               </div>
