--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,5 @@
-    <section>
-      <h1></h1>
-      <div>
+<section>
+      <div class="container-login">
         <div>
             <form action="">
               <div class="login-form"> 
@@ -20,4 +19,4 @@
             </form>
         </div>
       </div>
-    </section>
+</section>
