Added logout handleers

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
         <div class="button-container">
           <img class="logo" src="/assets/Clever-Waste.png" alt="404" />
           <ul>
-            <li><a class="button-nav" href="/home">Home</a></li>
+            <li><a class="button-nav" href="/">Home</a></li>
             <li><a class="button-nav" href="/dashboard">Dashboard</a></li>
             <li><a class="button-nav" href="/cart">Cart</a></li>
             <li><a class="button-nav login" href="/login">Login</a></li>
