--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,10 +18,12 @@
             <li><a class="button-nav" href="/">Home</a></li>
             <li><a class="button-nav" href="/dashboard">Dashboard</a></li>
             <li><a class="button-nav" href="/cart">Cart</a></li>
-            <li><a class="button-nav login" href="/login">Login</a></li>
-            <li>
-              <a class="button-nav login" href="/logout">Logout</a>
-            </li>
+            {{#if logged_in}}
+              <li><a class="button-nav login" href="/logout">Logout</a></li>
+            {{else}}
+              <li><a class="button-nav login" href="/login">Login</a></li>
+            {{/if}}
+
           </ul>
         </div>
       </section>
