--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,1 +1,4 @@
-<dir>404</dir>
+<body class="errStatus">
+  <header class="hidden"></header>
+  <h1 href="/"><center>404 sorry page could not be found</center></h1>
+</body>
