--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,12 @@ body {
   background-image: url("/assets/white-abstract-background_23-2148812993.jpg");
   background-size: cover;
 }
-
+.errStatus {
+  height: 100vh;
+  background-color: var(--Darkmode);
+  background-image: url("/assets/404-pages.png");
+  background-size: cover;
+}
 .background {
   margin-bottom: 60px;
 }
