added starter items for cart Added handler for cart Added helper util for hadling time and date Added partials with modal

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,4 +1,6 @@
 <body class="errStatus">
   <header class="hidden"></header>
   <h1 href="/"><center>404 sorry page could not be found</center></h1>
+  {{> modal}}
 </body>
+<script src="/js/modal.js"></script>
