added starter items for cart Added handler for cart Added helper util for hadling time and date Added partials with modal

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,3 +1,4 @@
+{{!-- Cart items --}}
 <div class="container-login">
   {{#each cart as |carts|}}
     <div>
@@ -11,6 +12,8 @@
     <br />
   {{/each}}
 </div>
+{{!-- Categorys --}}
 <div class="container-half">
-
+{{#each category as |categorys|}}
+{{/category}}
 </div>
