--- a/public/css/style.css
+++ b/public/css/style.css
@@ -165,7 +165,14 @@ button {
 .modal-trigger:hover {
   padding: 20px 60px;
 }
+.card {
+  border: 0;
+}
+/* Dasboard */
 
+.user-profile {
+  margin: 30px;
+}
 /* Hovers  */
 
 button-nav:hover {
@@ -179,3 +186,4 @@ button-nav:hover {
 }
 @media only screen and (max-width: 1024px) {
 }
+/* delete this  */
