--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,7 +16,9 @@
           <img class="logo" src="/assets/Clever-Waste.png" alt="404" />
           <ul>
             <li><a class="button-nav" href="/">Home</a></li>
-            <li><a class="button-nav" href="/dashboard">Dashboard</a></li>
+            {{#if logged_in}}
+              <li><a class="button-nav" href="/dashboard">Dashboard</a></li>
+            {{/if}}
             <li><a class="button-nav" href="/cart">Cart</a></li>
             {{#if logged_in}}
               <li><a class="button-nav login" href="/logout">Logout</a></li>
