--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,4 +1,4 @@
-{{!-- Cart items --}}
+{{! Cart }}
 <div class="container-login">
   {{#each cart as |carts|}}
     <div>
@@ -12,8 +12,12 @@
     <br />
   {{/each}}
 </div>
-{{!-- Categorys --}}
-<div class="container-half">
-{{#each category as |categorys|}}
-{{/category}}
+{{! Categorys }}
+
+<div class="container-login">
+  {{#each category as |categorys|}}
+    <p>{{categorys.name}}</p>
+    <p>{{exp}}</p>
+  {{/each}}
+</div>
 </div>
