added donate data and daonate route

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,6 +21,7 @@
             {{/if}}
             <li><a class="button-nav" href="/cart">Cart</a></li>
             {{#if logged_in}}
+              <li><a class="button-nav login" href="/Donate">Donate</a></li>
               <li><a class="button-nav login" href="/logout">Logout</a></li>
             {{else}}
               <li><a class="button-nav login" href="/login">Login</a></li>
