--- a/public/css/style.css
+++ b/public/css/style.css
@@ -70,6 +70,18 @@ ul li {
   margin: 0 8px;
   font-weight: bold;
 }
+/* buttons */
+button {
+  color: #fff;
+  text-transform: uppercase;
+  text-decoration: none;
+  background: var(--Taskbar);
+  padding: 20px;
+  border-radius: 5px;
+  display: inline-block;
+  border: none;
+  transition: all 0.4s ease 0s;
+}
 
 /* Login */
 
@@ -99,6 +111,9 @@ img {
   min-width: 100%;
   left: 0;
   bottom: 0;
+  margin-top: 20px;
+  min-height: 10px;
+  clear: both;
 }
 .logo {
   height: 150px;
@@ -156,12 +171,6 @@ img {
   cursor: pointer;
 }
 
-button {
-  border: 1px solid #333333;
-  outline: none;
-  color: #333333;
-}
-
 .modal-trigger:hover {
   padding: 20px 60px;
 }
@@ -175,7 +184,7 @@ button {
 }
 /* Hovers  */
 
-button-nav:hover {
+button:hover {
   color: var(--Button);
 }
 /* Media Querys */
