Updated items to specs

--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -3,7 +3,7 @@
     <div>
       {{carts.name}}
       {{carts.brand}}
-      <label class="align">Two
+      <label class="align">
         <input type="checkbox" />
         <span class="checkmark"></span>
       </label>
