Fixed routes to enclude changes. Added Seed for FoodBanks. Added foodbank Routes . Added to seeds index to get seeds from food items. Added to the home handlebars. didnt change public modal was spacing.

--- a/views/partials/modal.handlebars
+++ b/views/partials/modal.handlebars
@@ -1,4 +1,5 @@
-<div class="modal" id="modal-name" style="display: block">
+
+<div class="modal" id="modal-name" style="display: none">
   <div class="modal-sandbox"></div>
   <div class="modal-box">
     <div class="modal-header">
