--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -3,11 +3,24 @@
             <div class="row">
                 <div class="col-md-6">
                     <div class="full">
-                        <h1 class="cur" >Reduce<br>Food Waste</h1>
+                        {{#if logged_in}}
+                        <ul>
+                            {{#each foodItems as |item|}}
+                            <li>{{item.name}} expires {{item.expiresIn}}</li>
+                            
+                            {{/each}}
+
+                        </ul>
+                        {{else}}
+                        <div>
+                            <h1 class="cur" >Reduce<br>Food Waste</h1>
                             <p class="text">Nearly one-third of all food produced in the world is discarded or wasted for various reasons. That equates to nearly 1.3 billion tons every year</p>
                         </div>
-                <div class="col-md-6">
-            <img class="img" src="/assets/food_waste_heroes.jpg" alt="404">
+                        <div class="col-md-6">
+                            <img class="img" src="/assets/food_waste_heroes.jpg" alt="404">
+                        </div>div>
+                        {{/if}}
+                        
                 </div>
             </div>
         </div>
