--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -14,7 +14,7 @@
                 <div class="form-group">
                 <button class="button" type="submit">login</button>
                 <h4>No account?  </h4>
-                <h4>Click here :<a href="/signup"> Signup</a> </h4>
+                <h4><a class="signup" href="/signup"> Signup</a> today </h4>
               </div>
             </form>
         </div>
