--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,11 +1,10 @@
 <div class="home-page container">
 
 <div class="article-continer">
-    <h1 class="cur" >Food Waste in Australia</h1>
-    <p class="text">Here in Australia, 7.3 million tonnes of food is lost or wasted every year. And while a large proportion of this food is still perfectly edible, around 5 million Australians are going hungry.</p>
-    <p class="text"></p>On a global scale, 690 million people across the globe were affected by hunger in 2019, a number expected to rise sharply as a result of COVID-19, and three billion people were unable to afford a healthy diet.</p>
-    <p class="text"></p>While worldwide hunger continues to rise, an estimated 931 million tonnes of food, or 17% of total food available to consumers in 2019, went into the waste bins of households, retailers, restaurants and other food services – the weight of this waste equals that of 23 million fully loaded 40-tonne trucks — bumper-to-bumper, enough to circle the Earth 7 times!</p>
-    <br>
+    <h1 class="article-title" >Food Waste in Australia</h1>
+    <p class="article">Here in Australia, 7.3 million tonnes of food is lost or wasted every year. And while a large proportion of this food is still perfectly edible, around 5 million Australians are going hungry.</p>
+    <p class="article">On a global scale, 690 million people across the globe were affected by hunger in 2019, a number expected to rise sharply as a result of COVID-19, and three billion people were unable to afford a healthy diet.</p>
+    <p class="article">While worldwide hunger continues to rise, an estimated 931 million tonnes of food, or 17% of total food available to consumers in 2019, went into the waste bins of households, retailers, restaurants and other food services – the weight of this waste equals that of 23 million fully loaded 40-tonne trucks — bumper-to-bumper, enough to circle the Earth 7 times!</p>
     <a class="learn-more-button" href="https://www.foodbank.org.au/food-waste-facts-in-australia/?state=vic" target="_blank">Learn More!</a>
 </div>
 
@@ -13,14 +12,13 @@
     <div class="background-image">
         {{#if logged_in}}
         <div class="container-exp-food">
-            <h3>Food Expiring Soon</h3><a class="donate-button" href="/Donate">Donate</a>
+            <h3>Food Expiring Soon</h3>
             <ul class="exp-ul">
                 {{#each foodItems as |item|}}
                 <li class="exp-list">{{item.name}} expires {{item.expiresIn}}</li>
                 
                 {{/each}}
-
-            </ul>
+            <a class="donate-button" href="/Donate">Donate</a>
         
         </div>
         {{else}}
