--- a/views/partials/foodItem.handlebars
+++ b/views/partials/foodItem.handlebars
@@ -22,7 +22,7 @@
                     <div class="col col-3" data-label="Item Name">{{this.name}}</div>
                     <div class="col col-3" data-label="Brand">{{this.brand}}</div>
                     <div class="col col-1" data-label="Quantity">{{this.quantity}}</div>
-                    <div class="col col-3" data-label="Expiry Date">{{this.expiryDate}}</div>
+                    <div class="col col-3" data-label="Expiry Date">{{format_date this.expiryDate}}</div>
                     <div class="col col-1" data-label="Is Frozen?">{{this.isFrozen}}</div>
                     <div class="col col-1 delete-button" data-label="delete"> <a id="{{this.id}}" class="delete-food-item" onclick="deleteFoodItem({{this.id}})" ><i class="fa fa-trash"></i> </a></div>
                 </li>
