--- a/public/css/style.css
+++ b/public/css/style.css
@@ -279,264 +279,259 @@ button:hover {
 }
 /* delete this  */
 
-
 /* CSS FOR DASHBOARD */
 
-.container-dashboard{
+.container-dashboard {
   border: 1px black solid;
   margin: 50px 50px;
   padding: 10px;
   border-radius: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-grow: 1;
 }
 
-.add-item-btn{
+.add-item-btn {
   background-color: #1c0f13;
-  color:#F1F2Eb;
-
+  color: #f1f2eb;
 }
-  .responsive-table li {
-    border-radius: 3px;
-    padding: 25px 30px;
+.responsive-table li {
+  border-radius: 3px;
+  padding: 25px 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.responsive-table .table-header {
+  background-color: #e15554;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  color: #1c0f13;
+  border-radius: 10px;
+  font-weight: 700;
+}
+.responsive-table .table-header-heading {
+  background-color: none;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  color: #1c0f13;
+  margin-bottom: 0px;
+  font-weight: bold;
+}
+.responsive-table .table-row {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.responsive-table .col-1 {
+  flex-basis: 10%;
+}
+.responsive-table .col-2 {
+  flex-basis: 40%;
+}
+.responsive-table .col-3 {
+  flex-basis: 25%;
+}
+.responsive-table .col-4 {
+  flex-basis: 25%;
+}
+
+.responsive-table .delete-button {
+  text-align: end;
+  font-size: 30px;
+}
+@media all and (max-width: 767px) {
+  .table-header {
+    display: none;
+  }
+
+  li {
+    display: block;
+  }
+  .col {
+    flex-basis: 100%;
+  }
+  .col {
     display: flex;
-    justify-content: space-between;
-    margin-bottom: 25px;
+    padding: 10px 0;
   }
-  .responsive-table .table-header {
-    background-color: #E15554;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    color: #1c0f13;
-    border-radius: 10px;
-    font-weight: 700;
+  .col:before {
+    color: #6c7a89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
   }
-  .responsive-table .table-header-heading {
-    background-color: none;
-    font-size: 16px;
-    letter-spacing: 0.03em;
-    color: #1c0f13;
-    margin-bottom: 0px;
-    font-weight: bold;
+  .container-dashboard {
+    display: flex;
+    flex-direction: column;
   }
-  .responsive-table .table-row {
-    background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
-    border-radius: 10px;
-  }
-  .responsive-table .col-1 {
-    flex-basis: 10%;
-  }
-  .responsive-table .col-2 {
-    flex-basis: 40%;
-  }
-  .responsive-table .col-3 {
-    flex-basis: 25%;
-  }
-  .responsive-table .col-4 {
-    flex-basis: 25%;
-  }
-  
-  .responsive-table .delete-button{
-    text-align: end;
-    font-size: 30px;
-  }
-  @media all and (max-width: 767px) {
-    .table-header {
-      display: none;
-    }
+}
 
-    li {
-      display: block;
-    }
-    .col {
-      
-      flex-basis: 100%;
-      
-    }
-    .col {
-      display: flex;
-      padding: 10px 0;
-      
-    }
-    .col:before {
-      color: #6C7A89;
-      padding-right: 10px;
-      content: attr(data-label);
-      flex-basis: 50%;
-      text-align: right;
-    }
-    .container-dashboard{
-      display:flex;
-      flex-direction: column;
-    }
+@media screen and (max-width: 850px) {
+  .table-header,
+  .table-row,
+  .table-header-heading {
+    display: flex;
+    flex-direction: column;
+    line-height: 2em;
+    justify-content: center;
   }
-
-  @media screen and (max-width:850px) {
-    .table-header, .table-row, .table-header-heading {
-        display: flex;
-        flex-direction: column;
-        line-height: 2em;
-        justify-content: center;
-    }
-    .col {
-      
-      max-width:100%;
-    }
-    .add-food-item{
-      width: 100%;
-    }
-
-    .add-item-btn-submit{
-      width:100%;
-    }
-
-    .cancel-item-btn{
-      width: 100%;
-    }
+  .col {
+    max-width: 100%;
   }
-
-  @media screen  and (min-width:851px){
-    .add-item-btn-submit{
-      width:50%;
-    }
-
-    .cancel-item-btn{
-      width: 49%;
-    }
-  }
-
-  /** add food item form - https://codepen.io/ainalem/pen/GRqPwoz **/
-
-  .add-food-item{
-    width:50%;
-  }
-  .add-food-item-form {
-    background-color: #1c0f13;
-    border-radius: 20px;
-    box-sizing: border-box;
-    height: 700px;
-    padding: 20px;
-    min-width: 320px;
-  }
-  
-  .add-food-item-title {
-    color: #eee;
-    font-family: sans-serif;
-    font-size: 36px;
-    font-weight: 600;
-    margin-top: 30px;
-  }
-  
-  .input-container {
-    height: 50px;
-    position: relative;
+  .add-food-item {
     width: 100%;
   }
-  
-  .ic1 {
-    margin-top: 40px;
-  }
-  
-  .ic2 {
-    margin-top: 30px;
-  }
-  
-  .input {
-    background-color: #303245;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 4px 20px 0;
+
+  .add-item-btn-submit {
     width: 100%;
   }
-  
-  
-  .cut {
-    background-color: #15172b;
-    border-radius: 10px;
-    height: 20px;
-    left: 20px;
-    position: absolute;
-    top: -20px;
-    transform: translateY(0);
-    transition: transform 200ms;
-    width: 76px;
+
+  .cancel-item-btn {
+    width: 100%;
   }
-  
-  .cut-short {
-    width: 50px;
-  }
-  
-  .input:focus ~ .cut,
-  .input:not(:placeholder-shown) ~ .cut {
-    transform: translateY(8px);
-  }
-  
-  .placeholder {
-    color: #65657b;
-    font-family: sans-serif;
-    left: 20px;
-    line-height: 14px;
-    pointer-events: none;
-    position: absolute;
-    transform-origin: 0 50%;
-    transition: transform 200ms, color 200ms;
-    top: 20px;
-  }
-  
-  .input:focus ~ .placeholder,
-  .input:not(:placeholder-shown) ~ .placeholder {
-    transform: translateY(-30px) translateX(10px) scale(0.75);
-  }
-  
-  .input:not(:placeholder-shown) ~ .placeholder {
-    color: #808097;
-  }
-  
-  .input:focus ~ .placeholder {
-    color: #dc2f55;
-  }
-  
-  .add-item-btn-submit{
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    text-align: center;
-    background-color: #E15554;
-    color:#f1f2ec
-  }
-  
-  .add-item-btn-submit:active {
-    background-color: #E15554;
-    color:#1c0f13
+}
+
+@media screen and (min-width: 851px) {
+  .add-item-btn-submit {
+    width: 50%;
   }
 
-  .cancel-item-btn{
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    text-align: center;
-    background-color: #f1f2ec ;
-    color:#1c0f13;
-    margin-bottom: 20px;
+  .cancel-item-btn {
+    width: 49%;
   }
-  .cancel-item-btn:active {
-    background-color: #E15554;
-    color:#1c0f13
-  }
+}
+
+/** add food item form - https://codepen.io/ainalem/pen/GRqPwoz **/
+
+.add-food-item {
+  width: 50%;
+}
+.add-food-item-form {
+  background-color: #1c0f13;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 700px;
+  padding: 20px;
+  min-width: 320px;
+}
+
+.add-food-item-title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+}
+
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
+
+.ic1 {
+  margin-top: 40px;
+}
+
+.ic2 {
+  margin-top: 30px;
+}
+
+.input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
+
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 76px;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: #65657b;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color: #dc2f55;
+}
+
+.add-item-btn-submit {
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  text-align: center;
+  background-color: #e15554;
+  color: #f1f2ec;
+}
+
+.add-item-btn-submit:active {
+  background-color: #e15554;
+  color: #1c0f13;
+}
+
+.cancel-item-btn {
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  text-align: center;
+  background-color: #f1f2ec;
+  color: #1c0f13;
+  margin-bottom: 20px;
+}
+.cancel-item-btn:active {
+  background-color: #e15554;
+  color: #1c0f13;
+}
