--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,3 @@
-* {
-  /* border: 1px solid black; */
-}
-
 /* Darkmode if we want it  */
 /* https://dev.to/ananyaneogi/create-a-dark-light-mode-switch-with-css-variables-34l8 */
 
@@ -14,6 +10,12 @@
   --Button_dm: rgb(17, 75, 95);
   --Text: black;
   --Text_dm: white;
+  /* Agreed palette */
+  --IndianRed: #e15554;
+  --Xiketic: #1b0f13;
+  --Alabaster: #f1f2ec;
+  --QueenBlue: #466991;
+  --MidnightEagleGreen: #114b5f;
 }
 
 body {
@@ -21,6 +23,22 @@ body {
   background-color: var(--Darkmode);
   background-image: url("/assets/white-abstract-background_23-2148812993.jpg");
   background-size: cover;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Oswald", sans-serif;
+  /* font-size: 18px; */
+  line-height: 1.5;
+}
+
+p {
+  font-family: Arial, sans-serif;
+  /* font-size: 12px; */
+  line-height: 1.5;
 }
 .errStatus {
   height: 100vh;
@@ -34,7 +52,7 @@ body {
 /*Header*/
 .header-container {
   display: flex;
-  background-color: var(--Taskbar);
+  background-color: var(--IndianRed);
   min-height: 60px;
 }
 .button-container {
@@ -72,11 +90,12 @@ ul li {
 }
 /* buttons */
 button {
-  color: #fff;
+  color: var(--Alabaster);
   text-transform: uppercase;
   text-decoration: none;
-  background: var(--Taskbar);
-  padding: 20px;
+  text-align: center;
+  background: var(--QueenBlue);
+  padding: 10px;
   border-radius: 5px;
   display: inline-block;
   border: none;
@@ -84,17 +103,25 @@ button {
 }
 
 /* Login */
+
+.container-login {
+  border: 1px black solid;
+  margin: 50px 50px;
+  padding: 10px;
+  border-radius: 5px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+}
 img {
   height: 100vh;
   width: auto;
 }
 .divide {
-  border-top: 3px solid #bbb;
+  border-top: 3px solid var(--QueenBlue);
   margin: auto 50px;
 }
 /* Signup */
 .signup {
-  color: rgb(18, 126, 6);
+  color: var(--QueenBlue);
 }
 
 /* Footer */
@@ -102,7 +129,7 @@ img {
   text-align: center;
   padding: 2px;
   font-size: 0.8em;
-  background-color: var(--Taskbar);
+  background-color: var(--Xiketic);
   color: white;
   position: fixed;
   min-width: 100%;
@@ -139,8 +166,8 @@ img {
   height: 100%;
   left: 0;
   top: 0;
-  background: rgb(0, 0, 0);
-  background: rgba(0, 0, 0, 0.8);
+  background: var(--Text);
+  background: var(--Text);
   overflow: auto;
 }
 
@@ -179,41 +206,55 @@ img {
 .user-profile {
   margin: 30px;
 }
+
 /* Home Page */
 .home-page {
   display: flex;
   flex-direction: row;
-  flex-wrap: no-wrap;
+  flex-wrap: wrap;
+  margin: 5% auto;
 }
 
 .article-continer {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
   margin-right: 50px;
+  /* justify-content: center;
+  align-content: center; */
+  margin-bottom: 5%;
+}
+
+.article-title,
+.article {
+  text-align: center;
 }
 
 .action-container {
-  flex-grow: 2;
+  display: flex;
+  flex-grow: 1;
 }
 
 .learn-more-button {
-  color: #fff;
+  color: var(--Alabaster);
   text-transform: uppercase;
   text-decoration: none;
-  background: rgb(18, 126, 6);
+  background: var(--QueenBlue);
   padding: 10px;
   border-radius: 5px;
   display: inline-block;
   border: none;
   transition: all 0.4s ease 0s;
   margin: 10px;
+  max-width: 35%;
+  text-align: center;
+  align-self: center;
 }
 
 .background-image {
-  background-image: url("/assets/food_waste_heroes.jpg");
-  min-width: 480px;
-  min-height: 400px;
-  max-width: 800px;
-  max-height: 650px;
+  display: flex;
+  background-image: url("/assets/white-bench.png");
+  opacity: 0.9;
   background-size: 100%;
   background-repeat: no-repeat;
 }
@@ -224,28 +265,25 @@ img {
   padding: 10px 20px 20px;
   border-radius: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  align-content: center;
-  background-color: rgb(235, 226, 226);
-  width: 420px;
-  height: auto;
-}
-.container-exp-food h3 {
-  padding: 2%;
-  display: inline;
+  color: var(--Alabaster);
+  background-color: var(--Xiketic);
 }
 
 /* User Home Page */
 
 .donate-button {
-  color: #fff;
+  color: var(--Alabaster);
   text-transform: uppercase;
   text-decoration: none;
-  background: red;
+  background: var(--IndianRed);
   padding: 10px;
   border-radius: 5px;
   display: inline-block;
   border: none;
   transition: all 0.4s ease 0s;
+  margin: 5% auto;
+  text-align: center;
+  /* max-width: 30%; */
 }
 
 .exp-list {
@@ -267,276 +305,269 @@ button:hover {
 
 .signup:hover {
   text-decoration: none;
-  color: rgb(17, 65, 11);
+  color: var(--MidnightEagleGreen);
 }
 /* Media Querys */
 
 @media only screen and (max-width: 480px) {
 }
 @media only screen and (max-width: 768px) {
+  .table-header {
+    display: none;
+  }
+
+  li {
+    display: block;
+  }
+  .col {
+    flex-basis: 100%;
+  }
+  .col {
+    display: flex;
+    padding: 10px 0;
+  }
+  .col:before {
+    color: #6c7a89;
+    padding-right: 10px;
+    content: attr(data-label);
+    flex-basis: 50%;
+    text-align: right;
+  }
+  .container-dashboard {
+    display: flex;
+    flex-direction: column;
+  }
 }
+
+@media screen and (max-width: 850px) {
+  .table-header,
+  .table-row,
+  .table-header-heading {
+    display: flex;
+    flex-direction: column;
+    line-height: 2em;
+    justify-content: center;
+  }
+  .col {
+    max-width: 100%;
+  }
+  .add-food-item {
+    width: 100%;
+  }
+
+  .add-item-btn-submit {
+    width: 100%;
+  }
+
+  .cancel-item-btn {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 851px) {
+  .add-item-btn-submit {
+    width: 50%;
+  }
+
+  .cancel-item-btn {
+    width: 49%;
+  }
+}
+
 @media only screen and (max-width: 1024px) {
 }
-/* delete this  */
-
 
 /* CSS FOR DASHBOARD */
 
-.container-dashboard{
+.container-dashboard {
   border: 1px black solid;
   margin: 50px 50px;
   padding: 10px;
   border-radius: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
-  display:flex;
+  display: flex;
   flex-direction: row;
   flex-grow: 1;
 }
 
-.add-item-btn{
+.add-item-btn {
   background-color: #1c0f13;
-  color:#F1F2Eb;
-
+  color: #f1f2eb;
 }
-  .responsive-table li {
-    border-radius: 3px;
-    padding: 25px 30px;
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 25px;
-  }
-  .responsive-table .table-header {
-    background-color: #E15554;
-    font-size: 14px;
-    text-transform: uppercase;
-    letter-spacing: 0.03em;
-    color: #1c0f13;
-    border-radius: 10px;
-    font-weight: 700;
-  }
-  .responsive-table .table-header-heading {
-    background-color: none;
-    font-size: 16px;
-    letter-spacing: 0.03em;
-    color: #1c0f13;
-    margin-bottom: 0px;
-    font-weight: bold;
-  }
-  .responsive-table .table-row {
-    background-color: #ffffff;
-    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);
-    border-radius: 10px;
-  }
-  .responsive-table .col-1 {
-    flex-basis: 10%;
-  }
-  .responsive-table .col-2 {
-    flex-basis: 40%;
-  }
-  .responsive-table .col-3 {
-    flex-basis: 25%;
-  }
-  .responsive-table .col-4 {
-    flex-basis: 25%;
-  }
-  
-  .responsive-table .delete-button{
-    text-align: end;
-    font-size: 30px;
-  }
-  @media all and (max-width: 767px) {
-    .table-header {
-      display: none;
-    }
+.responsive-table li {
+  border-radius: 3px;
+  padding: 25px 30px;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 25px;
+}
+.responsive-table .table-header {
+  background-color: #e15554;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  color: #1c0f13;
+  border-radius: 10px;
+  font-weight: 700;
+}
+.responsive-table .table-header-heading {
+  background-color: none;
+  font-size: 16px;
+  letter-spacing: 0.03em;
+  color: #1c0f13;
+  margin-bottom: 0px;
+  font-weight: bold;
+}
+.responsive-table .table-row {
+  background-color: #ffffff;
+  box-shadow: 0px 0px 9px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+}
+.responsive-table .col-1 {
+  flex-basis: 10%;
+}
+.responsive-table .col-2 {
+  flex-basis: 40%;
+}
+.responsive-table .col-3 {
+  flex-basis: 25%;
+}
+.responsive-table .col-4 {
+  flex-basis: 25%;
+}
 
-    li {
-      display: block;
-    }
-    .col {
-      
-      flex-basis: 100%;
-      
-    }
-    .col {
-      display: flex;
-      padding: 10px 0;
-      
-    }
-    .col:before {
-      color: #6C7A89;
-      padding-right: 10px;
-      content: attr(data-label);
-      flex-basis: 50%;
-      text-align: right;
-    }
-    .container-dashboard{
-      display:flex;
-      flex-direction: column;
-    }
-  }
+.responsive-table .delete-button {
+  text-align: end;
+  font-size: 30px;
+}
 
-  @media screen and (max-width:850px) {
-    .table-header, .table-row, .table-header-heading {
-        display: flex;
-        flex-direction: column;
-        line-height: 2em;
-        justify-content: center;
-    }
-    .col {
-      
-      max-width:100%;
-    }
-    .add-food-item{
-      width: 100%;
-    }
+/** add food item form - https://codepen.io/ainalem/pen/GRqPwoz **/
 
-    .add-item-btn-submit{
-      width:100%;
-    }
+.add-food-item {
+  width: 50%;
+}
+.add-food-item-form {
+  background-color: #1c0f13;
+  border-radius: 20px;
+  box-sizing: border-box;
+  height: 700px;
+  padding: 20px;
+  min-width: 320px;
+}
 
-    .cancel-item-btn{
-      width: 100%;
-    }
-  }
+.add-food-item-title {
+  color: #eee;
+  font-family: sans-serif;
+  font-size: 36px;
+  font-weight: 600;
+  margin-top: 30px;
+}
 
-  @media screen  and (min-width:851px){
-    .add-item-btn-submit{
-      width:50%;
-    }
+.input-container {
+  height: 50px;
+  position: relative;
+  width: 100%;
+}
 
-    .cancel-item-btn{
-      width: 49%;
-    }
-  }
+.ic1 {
+  margin-top: 40px;
+}
 
-  /** add food item form - https://codepen.io/ainalem/pen/GRqPwoz **/
+.ic2 {
+  margin-top: 30px;
+}
 
-  .add-food-item{
-    width:50%;
-  }
-  .add-food-item-form {
-    background-color: #1c0f13;
-    border-radius: 20px;
-    box-sizing: border-box;
-    height: 700px;
-    padding: 20px;
-    min-width: 320px;
-  }
-  
-  .add-food-item-title {
-    color: #eee;
-    font-family: sans-serif;
-    font-size: 36px;
-    font-weight: 600;
-    margin-top: 30px;
-  }
-  
-  .input-container {
-    height: 50px;
-    position: relative;
-    width: 100%;
-  }
-  
-  .ic1 {
-    margin-top: 40px;
-  }
-  
-  .ic2 {
-    margin-top: 30px;
-  }
-  
-  .input {
-    background-color: #303245;
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    color: #eee;
-    font-size: 18px;
-    height: 100%;
-    outline: 0;
-    padding: 4px 20px 0;
-    width: 100%;
-  }
-  
-  
-  .cut {
-    background-color: #15172b;
-    border-radius: 10px;
-    height: 20px;
-    left: 20px;
-    position: absolute;
-    top: -20px;
-    transform: translateY(0);
-    transition: transform 200ms;
-    width: 76px;
-  }
-  
-  .cut-short {
-    width: 50px;
-  }
-  
-  .input:focus ~ .cut,
-  .input:not(:placeholder-shown) ~ .cut {
-    transform: translateY(8px);
-  }
-  
-  .placeholder {
-    color: #65657b;
-    font-family: sans-serif;
-    left: 20px;
-    line-height: 14px;
-    pointer-events: none;
-    position: absolute;
-    transform-origin: 0 50%;
-    transition: transform 200ms, color 200ms;
-    top: 20px;
-  }
-  
-  .input:focus ~ .placeholder,
-  .input:not(:placeholder-shown) ~ .placeholder {
-    transform: translateY(-30px) translateX(10px) scale(0.75);
-  }
-  
-  .input:not(:placeholder-shown) ~ .placeholder {
-    color: #808097;
-  }
-  
-  .input:focus ~ .placeholder {
-    color: #dc2f55;
-  }
-  
-  .add-item-btn-submit{
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    text-align: center;
-    background-color: #E15554;
-    color:#f1f2ec
-  }
-  
-  .add-item-btn-submit:active {
-    background-color: #E15554;
-    color:#1c0f13
-  }
+.input {
+  background-color: #303245;
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  color: #eee;
+  font-size: 18px;
+  height: 100%;
+  outline: 0;
+  padding: 4px 20px 0;
+  width: 100%;
+}
 
-  .cancel-item-btn{
-    border-radius: 12px;
-    border: 0;
-    box-sizing: border-box;
-    cursor: pointer;
-    font-size: 18px;
-    height: 50px;
-    margin-top: 38px;
-    text-align: center;
-    background-color: #f1f2ec ;
-    color:#1c0f13;
-    margin-bottom: 20px;
-  }
-  .cancel-item-btn:active {
-    background-color: #E15554;
-    color:#1c0f13
-  }
+.cut {
+  background-color: #15172b;
+  border-radius: 10px;
+  height: 20px;
+  left: 20px;
+  position: absolute;
+  top: -20px;
+  transform: translateY(0);
+  transition: transform 200ms;
+  width: 76px;
+}
+
+.cut-short {
+  width: 50px;
+}
+
+.input:focus ~ .cut,
+.input:not(:placeholder-shown) ~ .cut {
+  transform: translateY(8px);
+}
+
+.placeholder {
+  color: #65657b;
+  font-family: sans-serif;
+  left: 20px;
+  line-height: 14px;
+  pointer-events: none;
+  position: absolute;
+  transform-origin: 0 50%;
+  transition: transform 200ms, color 200ms;
+  top: 20px;
+}
+
+.input:focus ~ .placeholder,
+.input:not(:placeholder-shown) ~ .placeholder {
+  transform: translateY(-30px) translateX(10px) scale(0.75);
+}
+
+.input:not(:placeholder-shown) ~ .placeholder {
+  color: #808097;
+}
+
+.input:focus ~ .placeholder {
+  color: #dc2f55;
+}
+
+.add-item-btn-submit {
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  text-align: center;
+  background-color: #e15554;
+  color: #f1f2ec;
+}
+
+.add-item-btn-submit:active {
+  background-color: #e15554;
+  color: #1c0f13;
+}
+
+.cancel-item-btn {
+  border-radius: 12px;
+  border: 0;
+  box-sizing: border-box;
+  cursor: pointer;
+  font-size: 18px;
+  height: 50px;
+  margin-top: 38px;
+  text-align: center;
+  background-color: #f1f2ec;
+  color: #1c0f13;
+  margin-bottom: 20px;
+}
+.cancel-item-btn:active {
+  background-color: #e15554;
+  color: #1c0f13;
+}
