--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,6 @@
 
 {{#dashDataPlain}}
-<div class="container-dashboard">
+<div class="container-login">
    <div class="user-profile">
       <p>Welcome, {{name}} </p>
       <h5 class="user-name"></h5>
