--- a/views/partials/addfooditem.handlebars
+++ b/views/partials/addfooditem.handlebars
@@ -1,34 +1,52 @@
 <div class="add-food-item" style="display:none;">
-        <div class="add-food-item-form">
-      <div class="add-food-item-title">Add Food Item</div>
-       <div class="input-container ic1">
-        <input id="name" class="input" type="text" placeholder=" " required=true />
-        <div class="cut"></div>
-        <label for="name" class="placeholder">Item</label>
-      </div>
-      <div class="input-container ic2">
-        <input id="brand" class="input" type="text" placeholder=" " />
-        <div class="cut"></div>
-        <label for="brand" class="placeholder">Brand name</label>
-      </div>
-      <div class="input-container ic2">
-        <input id="quantity" class="input" type="number" placeholder=" " required=true />
-        <div class="cut cut-short"></div>
-        <label for="quantity" class="placeholder">Quantity</label>
-      </div>
-       <div class="input-container ic2"> 
-        <input id="expiryDate" class="input" type="text" placeholder=" " required=true/>
-        <div class="cut cut-short"></div>
-        <label for="expiryDate" class="placeholder">Expiry Date(Y-m-d)</label>
-      </div>
-        <div class="input-container ic2">
-        <select id ="foodCategoryId" class="input" placeholder=" " required=true>
-        </select>
-        <div class="cut cut-short"></div>
-        <label for="foodCategoryId" class="placeholder">Category</label>
-      </div>
-      <button type="text" class="add-item-btn-submit">submit</button>
-      <button type="text" class="cancel-item-btn">cancel</button>
-
+  <div class="add-food-item-form">
+    <div class="add-food-item-title">Add Food Item</div>
+    <div class="input-container ic1">
+      <input
+        id="name"
+        class="input"
+        type="text"
+        placeholder=" "
+        required="true"
+      />
+      <div class="cut"></div>
+      <label for="name" class="placeholder">Item</label>
     </div>
+    <div class="input-container ic2">
+      <input id="brand" class="input" type="text" placeholder=" " />
+      <div class="cut"></div>
+      <label for="brand" class="placeholder">Brand name</label>
+    </div>
+    <div class="input-container ic2">
+      <input
+        id="quantity"
+        class="input"
+        type="number"
+        placeholder=" "
+        required="true"
+      />
+      <div class="cut cut-short"></div>
+      <label for="quantity" class="placeholder">Quantity</label>
+    </div>
+    <div class="input-container ic2">
+      <input
+        id="expiryDate"
+        class="input"
+        type="text"
+        placeholder=" "
+        required="true"
+      />
+      <div class="cut cut-short"></div>
+      <label for="expiryDate" class="placeholder">Expiry Date(YYYY-MM-DD)</label>
+    </div>
+    <div class="input-container ic2">
+      <select id="foodCategoryId" class="input" placeholder=" " required="true">
+      </select>
+      <div class="cut cut-short"></div>
+      <label for="foodCategoryId" class="placeholder">Category</label>
+    </div>
+    <button type="text" class="add-item-btn-submit">submit</button>
+    <button type="text" class="cancel-item-btn">cancel</button>
+
+  </div>
 </div>
