--- a/views/cart.handlebars
+++ b/views/cart.handlebars
@@ -1,20 +1,30 @@
-<div class="container-login">
-  {{#each cart as |carts|}}
-    <div>
-      {{carts.name}}
-      {{carts.brand}}
-      <label class="align">
-        <input type="checkbox" />
-        <span class="checkmark"></span>
-      </label>
-    </div>
-    <br />
+<div class="flex check-mark">
+  <div class="container-half">
+    {{#each cart as |carts|}}
+      <div class="flex-row">
+        <p>Name:
+          {{carts.name}}</p>
+        <div class="flex-grow"></div>
+        <p class="center"> Brand: {{carts.brand}} </p>
+        <label class="align check-mark">
+          <input type="checkbox" class="check-mark" />
+          <span></span>
+        </label>
+      </div>
+      <div class="divide-check"></div>
+      <br />
 
-  {{/each}}
-</div>
-<div class="container-login">
-  {{#each category as |categorys|}}
-    <p>{{categorys.name}}</p>
-    <p>{{exp}}</p>
-  {{/each}}
+    {{/each}}
+  </div>
+  <div class="container-half">
+    {{#each category as |categorys|}}
+      <div>
+        <p>Category: {{categorys.name}}</p>
+
+      </div>
+      <div class="divide-check"></div>
+      <br />
+    {{/each}}
+
+  </div>
 </div>
