--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -41,11 +41,14 @@
       </section>
     </header>
     <div class="divide"></div>
+    {{> modal}}
     {{{body}}}
     <br />
+    
     <footer>
       <div class="footer">© Feet Go here</div>
     </footer>
-
+    
   </body>
 </html>
+<script src="/js/modal.js"></script>
