--- a/views/logout.handlebars
+++ b/views/logout.handlebars
@@ -1,7 +1,9 @@
-<section class="Content">
-  <div class="post-block">
-    <p>are you sure you want to logout?</p>
-    <button class="submit" href="/logout">Logout</button>
-  </div>
-</section>
-<script src="/js/logout.js"></script>
+<div class="container-login">
+  <section class="Content">
+    <div class="post-block">
+      <p>Are you sure you want to logout?</p>
+      <button class="submit" href="/logout">Logout</button>
+    </div>
+  </section>
+  <script src="/js/logout.js"></script>
+</div>
