--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -4,11 +4,11 @@
             <form action="">
               <div class="login-form"> 
                 <div class="form-group">
-                <label for="email-login">email:</label>
+                <label for="email-login">Email:</label>
                 <input class="form-input" type="text" id="email-login" />
               </div>
               <div class="form-group">
-                <label for="password-login">password:</label>
+                <label for="password-login">Password:</label>
                 <input class="form-input" type="password" id="password-login" />
               </div>
                 <div class="form-group">
