--- a/views/donate.handlebars
+++ b/views/donate.handlebars
@@ -9,6 +9,10 @@
   <br />
   <section>
     <div>
+      <a class="foodBankText" href="http://www.longbeachanglicans.org.au/">St
+        Chad's Church Chelsea Food Bank: 12-14 Thames Promenade, Chelsea VIC
+        3196</a>
+      <br />
       {{#each locations as |location|}}
         <a
           class="foodBankText"
