date format resolved

--- a/views/partials/foodItem.handlebars
+++ b/views/partials/foodItem.handlebars
@@ -18,9 +18,7 @@
             <div class="col col-4" data-label="Item Name">{{this.name}}</div>
             <div class="col col-3" data-label="Brand">{{this.brand}}</div>
             <div class="col col-1" data-label="Quantity">{{this.quantity}}</div>
-            <div class="col col-3" data-label="Expiry Date">{{format_date
-                this.expiryDate
-              }}</div>
+            <div class="col col-3" data-label="Expiry Date">{{format_date this.expiryDate}}</div>
             <div class="col col-1 delete-button" data-label="delete">
               <a
                 id="{{this.id}}"
