--- a/public/css/style.css
+++ b/public/css/style.css
@@ -59,6 +59,12 @@ p {
 .button-container {
   min-width: 100%;
 }
+.cart-button {
+  flex-direction: column;
+  max-width: 48%;
+  max-height: 60px;
+  margin: 10px 5px;
+}
 ul {
   list-style-type: none;
 }
@@ -118,7 +124,7 @@ button {
 .container-half {
   max-width: 39%;
   border: 1px black solid;
-  margin: 50px 50px;
+  margin: 10px 50px;
   padding: 10px;
   border-radius: 5px;
   box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -138,11 +144,14 @@ button {
   justify-content: space-between;
 }
 .check-mark {
-  justify-content: space-between;
+  justify-content: space-around;
 }
 /* Login */
 .divide-check {
   border-top: 0.1px solid var(--QueenBlue);
+}
+.divide-check-thick {
+  border-top: 5px solid var(--QueenBlue);
 }
 .container-login {
   border: 1px black solid;
@@ -347,6 +356,9 @@ button:hover {
   .home-page {
     flex-wrap: wrap;
   }
+  .button-nav {
+    margin: 0;
+  }
 
   .action-container {
     background: none;
@@ -357,6 +369,7 @@ button:hover {
   .table-header {
     display: none;
     flex-direction: column;
+    margin: 5px 10px;
   }
 
   li {
@@ -436,13 +449,21 @@ button:hover {
     flex-wrap: wrap;
   }
 
+  .cart-button {
+    max-width: 90%;
+  }
   .check-mark {
     flex-direction: column;
   }
+  .flex-row {
+    justify-content: center;
+    margin: 10px 50px;
+  }
+
   .container-half {
     max-width: 100%;
     border: 1px black solid;
-    margin: 50px 50px;
+    margin: 20px 50px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
@@ -450,7 +471,10 @@ button:hover {
   }
 }
 /* CSS FOR CART */
-
+.table-header-text {
+  font-weight: 700;
+  font-size: 120%;
+}
 /* CSS FOR DASHBOARD */
 
 .container-dashboard {
