--- a/views/partials/addfoodcategory.handlebars
+++ b/views/partials/addfoodcategory.handlebars
@@ -1,4 +1,4 @@
-<div class="modal" id="categoryAdd" style="display: none">
+<div class="modal1" id="categoryAdd1" style="display: none">
   <div class="modal-sandbox"></div>
   <div class="modal-box">
     <div class="modal-header">
