--- a/public/css/style.css
+++ b/public/css/style.css
@@ -216,7 +216,15 @@ img {
   height: 100%;
   left: 0;
   top: 0;
-
+  overflow: auto;
+}
+.modal1 {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
   overflow: auto;
 }
 
