--- a/views/partials/addfooditem.handlebars
+++ b/views/partials/addfooditem.handlebars
@@ -46,7 +46,7 @@
       <label for="foodCategoryId" class="placeholder">Category</label>
     </div>
     <button type="text" class="add-item-btn-submit">submit</button>
-    <button type="text" class="cancel-item-btn">cancel</button>
+    <button type="text" class="cancel-item-btn2">cancel</button>
 
   </div>
 </div>
