fixed error on submit

--- a/views/partials/addfooditem.handlebars
+++ b/views/partials/addfooditem.handlebars
@@ -45,7 +45,7 @@
       <div class="cut cut-short"></div>
       <label for="foodCategoryId" class="placeholder">Category</label>
     </div>
-    <button type="text" class="add-item-btn-submit">submit</button>
+    <button type="text" id="add-item-btn-submit">submit</button>
     <button type="text" class="cancel-item-btn2">cancel</button>
 
   </div>
